@@ -86,6 +86,7 @@ importFrom(VGAM,dbetabinom.ab)
 importFrom(VGAM,vglm)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
+importFrom(data.table,fwrite)
 importFrom(futile.logger,appender.tee)
 importFrom(futile.logger,flog.appender)
 importFrom(futile.logger,flog.debug)
@@ -166,4 +167,3 @@ importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
-importFrom(utils,write.table)
