@@ -33,6 +33,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
       weights when available  
     o Changed default of min.target.width in preprocessIntervals from 10 to 100
       (#73)  
+    o replaced write.table with data.table::fwrite to automatically support
+      producing gzipped output (requires data.table 1.12.4, #106)
+    o Coverage.R now gzips BAM file coverage (requires data.table 1.12.4, #106)
 
 BUGFIXES
 
